--- a/package.json
+++ b/package.json
@@ -8,14 +8,31 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "check": "npm run check:prettier && npm run check:eslint",
+    "check:prettier": "prettier -c .",
+    "check:eslint": "eslint . --ext .ts --max-warnings 0",
+    "fix": "npm run fix:prettier && npm run fix:eslint",
+    "fix:prettier": "prettier --write .",
+    "fix:eslint": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.3",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "aws-cdk": "2.97.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
