--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
+    "deploy": "cdk deploy --all",
     "check": "npm run check:prettier && npm run check:eslint",
     "check:prettier": "prettier -c .",
     "check:eslint": "eslint . --ext .ts --max-warnings 0",
@@ -22,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "aws-cdk": "2.107.0",
+    "esbuild": "^0.19.9",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -39,6 +41,7 @@
   "dependencies": {
     "aws-cdk-lib": "2.107.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.3.1",
     "source-map-support": "^0.5.21"
   }
 }
