--- a/handlers/package.json
+++ b/handlers/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "description": "",
   "dependencies": {
-    "@middy/core": "^5.1.0"
+    "@middy/core": "^5.1.0",
+    "@middy/http-error-handler": "^5.1.0",
+    "@middy/http-header-normalizer": "^5.1.0",
+    "@middy/http-json-body-parser": "^5.1.0",
+    "@middy/input-output-logger": "^5.1.0",
+    "discord-interactions": "^3.4.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130"
